--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -12,11 +12,14 @@
     "@chakra-ui/react": "^2.6.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^10.12.16",
     "next": "13.4.10",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
