--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: frontend-service
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
+
+      - name: Lint Code
+        run: npm run lint
 
       - name: Build application
         run: npm run build
@@ -36,14 +43,17 @@ jobs:
       - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/frontend-service:latest
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.3
+      - name: Add SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          host: ${{ secrets.PRODUCTION_EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.PRODUCTION_EC2_HOST }} << 'EOF'
             docker pull ${{ secrets.DOCKER_USERNAME }}/frontend-service:latest
             docker stop frontend-service || true
             docker rm frontend-service || true
-            docker run --name frontend-service --network demo-always-friday-network -p 3000:3000 -d ${{ secrets.DOCKER_USERNAME }}/frontend-service
+            docker run --name frontend-service --network demo-always-friday-network -p 3000:3000 -d ${{ secrets.DOCKER_USERNAME }}/frontend-service:latest
+          EOF
