--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -14,16 +14,21 @@
     "@emotion/styled": "^11.10.6",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^10.12.16",
+    "i18next": "^23.15.1",
     "next": "13.4.10",
+    "next-i18next": "^15.3.1",
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
+    "@types/react-icons": "^3.0.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.10",
     "eslint-config-prettier": "^9.1.0",
